force-app/main/default/objects/Sales_Comp__c/Sales_Comp__c.object-meta.xml
<CustomObject>
    <label>Sales Comp</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Sales Comp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Comps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>