force-app/main/default/objects/Sales_Comp__c/fields/Authoriser__c.field-meta.xml
<CustomField>
    <fullName>Authoriser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authoriser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Comps</relationshipName>
    <type>Lookup</type>
</CustomField>