force-app/main/default/objects/Sales_Comp__c/fields/Comp_Type__c.field-meta.xml
<CustomField>
    <fullName>Comp_Type__c</fullName>
    <label>Comp Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPV</fullName>
            </value>
            <value>
                <fullName>Casino Dollar</fullName>
            </value>
            <value>
                <fullName>Comp Dollar</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Soft Cost</fullName>
            </value>
            <value>
                <fullName>MPV</fullName>
                <isActive>false</isActive>
                <label>MPV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>