force-app/main/default/objects/Sales_Comp__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>F&amp;B Dining</fullName>
            </value>
            <value>
                <fullName>Guest Reactivation</fullName>
            </value>
            <value>
                <fullName>Guest Service Recovery</fullName>
            </value>
            <value>
                <fullName>In-Market Activity</fullName>
            </value>
            <value>
                <fullName>Loyalty Campaign</fullName>
            </value>
            <value>
                <fullName>Loyalty Recognition</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Prizes for events and draws</fullName>
            </value>
            <value>
                <fullName>Promotions - events and draws</fullName>
            </value>
            <value>
                <fullName>Relationship maintenance</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Service Recovery</fullName>
            </value>
            <value>
                <fullName>Special Occasion</fullName>
            </value>
            <value>
                <fullName>Surprise &amp; Delights (Special Occasion)</fullName>
            </value>
            <value>
                <fullName>Surprise and Delights</fullName>
            </value>
            <value>
                <fullName>Surprise and Delights (Special Occasion)</fullName>
            </value>
            <value>
                <fullName>Welcome / On Boarding / Lapsed</fullName>
            </value>
            <value>
                <fullName>Flights</fullName>
            </value>
            <value>
                <fullName>Room Upgrades</fullName>
            </value>
            <value>
                <fullName>Dinners</fullName>
            </value>
            <value>
                <fullName>Etc.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Rebate Program</fullName>
                <isActive>false</isActive>
                <label>Rebate Program</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>