force-app/main/default/objects/Sales_Comp__c/fields/Estimated_Gift_Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Gift_Presentation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Gift Presentation Date</label>
    <type>Date</type>
</CustomField>