force-app/main/default/objects/Sales_Comp__c/fields/isForVoid__c.field-meta.xml
<CustomField>
    <fullName>isForVoid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isForVoid</label>
    <type>Checkbox</type>
</CustomField>