force-app/main/default/objects/Sales_Comp__c/fields/Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Formula__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>