force-app/main/default/objects/Sales_Comp__c/recordTypes/CD_CP.recordType-meta.xml
<RecordType>
    <fullName>CD_CP</fullName>
    <active>true</active>
    <label>CD/CP</label>
</RecordType>