force-app/main/default/objects/Sales_Comp__c/recordTypes/Soft_Cost.recordType-meta.xml
<RecordType>
    <fullName>Soft_Cost</fullName>
    <active>true</active>
    <label>Soft Cost</label>
</RecordType>