force-app/main/default/objects/Sales_Comp__c/recordTypes/SPV_MPV.recordType-meta.xml
<RecordType>
    <fullName>SPV_MPV</fullName>
    <active>true</active>
    <label>SPV</label>
</RecordType>