force-app/main/default/objects/Sales_Comp__c/validationRules/Not_Allowed_to_Edit_Gift.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Allowed_to_Edit_Gift</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Permission.Skip_Validations_Permission,
false,
IF( RecordType.Name = &apos;Gift&apos; &amp;&amp; ( $Permission.TSEG_Casino_Host_Access_PS = true ||   $Permission.TSEG_Operation = true), true, false)
)</errorConditionFormula>
    <errorMessage>You do not have access to edit Gift Sales Comp Records</errorMessage>
</ValidationRule>