force-app/main/default/objects/Sales_Comp__c/validationRules/Sales_Comp_Negative_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Comp_Negative_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>/*
Amount__c &lt; 0
*/

IF($Permission.Skip_Validations_Permission, 
false,
Amount__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please enter an amount greater than 0</errorMessage>
</ValidationRule>